Minor tweaks, bugged dark mode

--- a/formsStyle.css
+++ b/formsStyle.css
@@ -5,11 +5,6 @@ img {
 	margin: auto;
 }
 
-#container {
-	display: flex;
-	flex-direction: column;
-}
-
 title {
 	text-align: center;
 	margin: auto;
@@ -19,7 +14,7 @@ text {
 }
 
 body {
-    background-color: aliceblue;
+    background-color: white;
     text-align: center;
     font-family: 'Titillium Web', sans-serif;
 }
@@ -57,120 +52,92 @@ input {
     border-radius: 5px;
     width: 4in;
     height: 30px;
-    background: aliceblue;
-    border-color: aliceblue;
-    outline: 0;
-    margin-bottom: 10px;
-}
-
-#button {
-    -moz-box-shadow: 0px 10px 14px -7px #276873;
-	-webkit-box-shadow: 0px 10px 14px -7px #276873;
-	box-shadow: 0px 10px 14px -7px #276873;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-	background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-	background-color:#599bb3;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-    font-size:20px;
-    text-align: center;
-	font-weight:bold;
-	text-decoration:none;
-    text-shadow:0px 1px 0px #3d768a;
-    outline: none;
-    font-family: 'Titillium Web', sans-serif;
-    height: 40px;
-}
-
-#mode-button {
-	-moz-box-shadow: 0px 10px 14px -7px #276873;
-	-webkit-box-shadow: 0px 10px 14px -7px #276873;
-	box-shadow: 0px 10px 14px -7px #276873;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-	background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-	background-color:#599bb3;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-    font-size:20px;
-    text-align: center;
-	font-weight:bold;
-	text-decoration:none;
-    text-shadow:0px 1px 0px #3d768a;
-    outline: none;
-    font-family: 'Titillium Web', sans-serif;
-    height: 40px;
-}
-
-#button:hover {
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-	background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
-	background-color:#408c99;
-}
-
-#button:active {
-    position:relative;
-	top:1px;
-}
-
-#button:active {
-    color: aliceblue;
-}
-
-#mode-button:hover {
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-	background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
-	background-color:#408c99;
-}
-
-#mode-button:active {
-    position:relative;
-	top:1px;
-}
-
-#next-img {
-	border-radius: 5px;
-    width: 4in;
-    height: 30px;
-    background: aliceblue;
-    border-color: aliceblue;
+    background: white;
+    border-color: white;
     outline: 0;
     margin-bottom: 20px;
 }
 
+.main-buttons {
+	border: none;
+	background: #404040;
+	color: #ffffff !important;
+	font-weight: 100;
+	padding: 10px;
+	text-transform: uppercase;
+	border-radius: 6px;
+	display: inline-block;
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	height: 32px;
+}
+
+.main-buttons:hover {
+	color: #404040 !important;
+	font-weight: 700 !important;
+	letter-spacing: 3px;
+	background: none;
+	-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	transition: all 0.3s ease 0s;
+}
+
+#mode-button {
+	position: absolute;
+	bottom: 0px;
+	right: 20px;
+	width: 1.5in;
+}
+
+#submit-button {
+	padding-top: 10px;
+}
+
+#target {
+	color: #fff !important;
+	text-transform: uppercase;
+	text-decoration: none;
+	background-color: #494949;
+	padding: 20px;
+	border-radius: 20px;
+	display: inline-block;
+	border: none;
+	transition: all 0.4s ease 0s;
+	width: 1in;
+	margin: 20px;
+	cursor: pointer;
+	outline: none;
+}
+
+#target:hover {
+	text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+	-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	transition: all 0.4s ease 0s;
+}
+
+.toggle-buttons {
+	color: white !important;
+	text-transform: uppercase;
+	background: #494949;
+	padding: 20px;
+	border: 4px solid #494949 !important;
+	border-radius: 6px;
+	display: inline-block;
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+}
+
+.toggle-buttons:hover {
+	color: #494949 !important;
+	border-radius: 50px;
+	border-color: #494949 !important;
+	transition: all 0.3s ease 0s;
+	background-color: white;
+	outline: none;
+}
+
 #previous-img {
-	border-radius: 5px;
-    width: 4in;
-    height: 30px;
-    background: aliceblue;
-    border-color: aliceblue;
-    outline: 0;
-	margin-bottom: 20px;
+	outline: none;
 }
